# basic_texture_atlas

./: CMakeLists.txt  LICENSE  README.md
include/: AtlasMetaDataWriter.h  CombinedRgbaImageMetaData.h  Image.h  ImageDecoder.h  ImageEncoder.h  ImageReel.h  ImageSrcDir.h  RgbaImage.h
src/: AtlasMetaDataWriter.cpp  Image.cpp  ImageDecoder.cpp  ImageEncoder.cpp  ImageReel.cpp  ImageSrcDir.cpp  RgbaImage.cpp  main.cpp
